--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.bansal.baabae"
+        applicationId "com.company.bansal.baabae"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
